add_executable(temperature_conversion temperature_conversion.cpp )
target_link_libraries(temperature_conversion PUBLIC common_utility)

add_executable(sum_of_values sum_of_values.cpp )
target_link_libraries(sum_of_values PUBLIC common_utility)

add_executable(bulls_and_cows bulls_and_cows.cpp )
target_link_libraries(bulls_and_cows PUBLIC common_utility)